# substr-iterator

./: .gitignore  CHANGELOG.md  Cargo.toml  readme.md
.github/workflows/: code-checking.yml  release-pr.yml  testing.yml
benches/: bench.rs
src/: lib.rs
