[package]
name = "substr-iterator"
description = "Substring extractor based on characters without allocation"
keywords = ["string", "no_alloc"]
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
readme = "readme.md"
license = "MIT"
version = "0.1.2"
edition = "2021"

[features]
default = ["serde", "std"]
serde = ["dep:serde", "std"]
std = []

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5" }
test-case = { version = "3" }
serde_json = { version = "1" }

[[bench]]
name = "bench"
harness = false
